--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -2,3 +2,18 @@
 # Shared definition block
 shared:
   image: build-xip
+  
+  # Job definition block
+jobs:
+  main:
+    requires: [~pr, ~commit]
+    # Steps definition block.
+    steps:
+      - export: export GREETING="Hello, world!"
+      - hello: echo $GREETING
+      - set-metadata: meta set example.coverage 99.95
+  second_job:
+    requires: [main] # second_job will run after main job is done
+    steps:
+      - make_target: make greetings
+      - get-metadata: meta get example
