--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -9,12 +9,12 @@ jobs:
     requires: [~pr, ~commit]
     # Steps definition block.
     steps:
-      - whereisi: pwd && ls -al
+      - whereisi: java -version
       - export: export GREETING="Hello, world!"
       - hello: echo $GREETING
       - set-metadata: meta set example.coverage 99.95
-  second_job:
-    requires: [main] # second_job will run after main job is done
-    steps:
-      - make_target: make greetings
-      - get-metadata: meta get example
+#  second_job:
+#    requires: [main] # second_job will run after main job is done
+#    steps:
+#      - make_target: make greetings
+#      - get-metadata: meta get example
